<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.fgtit.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.fgtit.ui.login.LoginFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_registro"
            app:destination="@id/navigation_registro" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.fgtit.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_registro"
        android:name="com.fgtit.RegistroFragment"
        android:label="@string/title_registro"
        tools:layout="@layout/fragment_registro" />
</navigation>