<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroFragment">

    <EditText
        android:id="@+id/editCedula"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:hint="@string/cedula"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textNombres"
        android:layout_width="336dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:text="@string/cargando"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBuscar" />

    <Button
        android:id="@+id/buttonEnviar"
        android:layout_width="91dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:text="@string/Enviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNombres" />

    <Button
        android:id="@+id/buttonBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCedula" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarWidgetTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextColor="@color/white"
        app:titleTextColor="@color/white"/>

    <TextView
        android:id="@+id/textRespuesta"
        android:layout_width="336dp"
        android:layout_height="42dp"
        android:layout_marginTop="28dp"
        android:text="@string/cargando"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEnviar" />

    <Button
        android:id="@+id/buttonEliminar"
        android:layout_width="121dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/Eliminar"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/buttonEnviar"
        app:layout_constraintTop_toBottomOf="@+id/textNombres" />

</androidx.constraintlayout.widget.ConstraintLayout>